<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/activity_detail_ssn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dip"
            android:text="@string/ssn_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_detail_ssn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/activity_detail_ssn_label"
            android:layout_marginLeft="4dip"
            android:layout_toRightOf="@+id/activity_detail_ssn_label"
            android:hint="@string/ssn_hint"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_detail_fname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/activity_detail_ssn_label"
            android:text="@string/fname_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_detail_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/activity_detail_fname_label"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/activity_detail_fname_label"
            android:hint="@string/fname_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_detail_lname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/activity_detail_fname_label"
            android:text="@string/lname_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_detail_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/activity_detail_lname_label"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@+id/activity_detail_lname_label"
            android:hint="@string/lname_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_detail_insurer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/activity_detail_lname_label"
            android:layout_marginTop="6dip"
            android:text="@string/insurer_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_detail_insurer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/activity_detail_insurer_label"
            android:layout_marginLeft="4dip"
            android:layout_toRightOf="@id/activity_detail_insurer_label"
            android:hint="@string/insurer_hint"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/activity_detail_xray_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="6dip"
            android:text="@string/xray_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/activity_detail_add_xray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add" />
    </LinearLayout>

    <ListView
        android:id="@+id/activity_detail_xrays"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/activity_detail_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/update" />

        <Button
            android:id="@+id/activity_detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/activity_detail_update"
            android:text="@string/delete" />
    </RelativeLayout>

</LinearLayout>